@@ -1,5 +1,10 @@
 # $Id$
 
+2009-03-23	Denis M. Gabaidulin
+
+	* main/Utils/CommandLine/ArgumentBuilder.class.php. Simple builder to hide
+	complex interface.
+
 2009-03-19	Denis M. Gabaidulin
 
 	* main/Base/Collection.class.php. Useful accessors added.
